@@ -15,10 +15,15 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.ui.Model;
 import jakarta.servlet.http.HttpServletRequest;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -82,13 +87,12 @@ public class AuthController {
                description = "카카오 인증 서버로부터 받은 인가 코드를 처리하여 사용자 정보를 조회합니다.")
     @SecurityRequirements // 인증 불필요
     @GetMapping("/kakao/callback")
-    public String kakaoCallback(
+    public ResponseEntity<Void> kakaoCallback(
             @Parameter(description = "카카오로부터 받은 인가 코드", required = true)
             @RequestParam("code") String code,
             @Parameter(description = "플로우 테스트에서 왔는지 확인하는 state 파라미터", required = false)
             @RequestParam(value = "state", required = false) String state,
-            HttpServletRequest request,
-            Model model) {
+            HttpServletRequest request) {
         String referer = request.getHeader("Referer");
         log.info("카카오 콜백 처리 시작 - code: {}, state: {}, referer: {}", code, state, referer);
         
@@ -128,49 +132,94 @@ public class AuthController {
                 
                 // 플로우 테스트에서 온 경우 다시 플로우 테스트로 리다이렉트
                 if (isFromFlowTest) {
-                    String redirectUrl = "redirect:/flow-test.html?login_success=true&member_id=" + member.getId() + 
-                           "&token=" + tempToken + "&is_existing=true";
-                    log.info("기존 회원 플로우 테스트 리다이렉트: {}", redirectUrl);
-                    return redirectUrl;
+                    try {
+                        String targetUrl = "/flow-test.html?login_success=true&member_id=" + member.getId() + 
+                               "&token=" + tempToken + "&is_existing=true";
+                        URI redirectUri = new URI(targetUrl);
+                        log.info("기존 회원 플로우 테스트 리다이렉트: {}", redirectUri);
+                        HttpHeaders headers = new HttpHeaders();
+                        headers.setLocation(redirectUri);
+                        return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                    } catch (Exception e) {
+                        log.error("플로우 테스트 리다이렉트 URI 생성 실패", e);
+                        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                    }
                 }
                 
-                // "/auth/test"에서 온 로그인 테스트의 경우 결과 페이지 표시
+                // "/auth/test"에서 온 로그인 테스트의 경우 홈으로 리다이렉트 (model 사용 불가)
                 if (referer != null && referer.contains("/auth/test")) {
-                    model.addAttribute("success", true);
-                    model.addAttribute("isExistingMember", true);
-                    model.addAttribute("member", member);
-                    model.addAttribute("userInfo", userInfo);
-                    model.addAttribute("loginToken", tempToken);
-                    return "kakao-login-result";
+                    try {
+                        String targetUrl = "/?login_success=true&is_existing=true&message=login_test_completed";
+                        URI redirectUri = new URI(targetUrl);
+                        HttpHeaders headers = new HttpHeaders();
+                        headers.setLocation(redirectUri);
+                        return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                    } catch (Exception e) {
+                        log.error("로그인 테스트 리다이렉트 URI 생성 실패", e);
+                        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                    }
                 }
                 
                 // 홈페이지에서 온 일반 로그인의 경우 홈페이지로 리다이렉트
-                String redirectUrl = "redirect:/?login_success=true&member_id=" + member.getId() + 
-                       "&token=" + tempToken + "&is_existing=true&nickname=" + 
-                       java.net.URLEncoder.encode(member.getNickname(), "UTF-8");
-                log.info("기존 회원 홈페이지 리다이렉트: {}", redirectUrl);
-                return redirectUrl;
+                try {
+                    String targetUrl = "/?login_success=true&member_id=" + member.getId() + 
+                           "&token=" + tempToken + "&is_existing=true&nickname=" + 
+                           URLEncoder.encode(member.getNickname(), StandardCharsets.UTF_8);
+                    URI redirectUri = new URI(targetUrl);
+                    log.info("기존 회원 홈페이지 리다이렉트: {}", redirectUri);
+                    HttpHeaders headers = new HttpHeaders();
+                    headers.setLocation(redirectUri);
+                    return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                } catch (Exception e) {
+                    log.error("기존 회원 홈페이지 리다이렉트 URI 생성 실패", e);
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                }
             } else {
                 // 신규 회원 - 회원가입 플로우로 리다이렉트
                 log.info("신규 회원 감지 - 회원가입 플로우로 이동");
                 
                 // 플로우 테스트에서 온 경우 액세스 토큰을 포함해서 플로우 테스트로 리다이렉트
                 if (isFromFlowTest) {
-                    String redirectUrl = "redirect:/flow-test.html?login_success=true&access_token=" + accessToken + 
-                           "&is_new_member=true";
-                    log.info("신규 회원 플로우 테스트 리다이렉트: {}", redirectUrl);
-                    return redirectUrl;
+                    try {
+                        String targetUrl = "/flow-test.html?login_success=true&access_token=" + accessToken + 
+                               "&is_new_member=true";
+                        URI redirectUri = new URI(targetUrl);
+                        log.info("신규 회원 플로우 테스트 리다이렉트: {}", redirectUri);
+                        HttpHeaders headers = new HttpHeaders();
+                        headers.setLocation(redirectUri);
+                        return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                    } catch (Exception e) {
+                        log.error("신규 회원 플로우 테스트 리다이렉트 URI 생성 실패", e);
+                        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                    }
                 }
                 
                 // "/auth/test"에서 온 로그인 테스트의 경우 닉네임 설정 페이지로 리다이렉트
                 if (referer != null && referer.contains("/auth/test")) {
-                    return "redirect:/signup/nickname?access_token=" + accessToken;
+                    try {
+                        String targetUrl = "/signup/nickname?access_token=" + accessToken;
+                        URI redirectUri = new URI(targetUrl);
+                        HttpHeaders headers = new HttpHeaders();
+                        headers.setLocation(redirectUri);
+                        return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                    } catch (Exception e) {
+                        log.error("닉네임 설정 페이지 리다이렉트 URI 생성 실패", e);
+                        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                    }
                 }
                 
                 // 홈페이지에서 온 신규 회원의 경우 홈페이지로 리다이렉트 (회원가입 필요 안내)
-                String redirectUrl = "redirect:/?login_success=true&access_token=" + accessToken + "&is_new_member=true";
-                log.info("신규 회원 홈페이지 리다이렉트: {}", redirectUrl);
-                return redirectUrl;
+                try {
+                    String targetUrl = "/?login_success=true&access_token=" + accessToken + "&is_new_member=true";
+                    URI redirectUri = new URI(targetUrl);
+                    log.info("신규 회원 홈페이지 리다이렉트: {}", redirectUri);
+                    HttpHeaders headers = new HttpHeaders();
+                    headers.setLocation(redirectUri);
+                    return new ResponseEntity<>(headers, HttpStatus.FOUND);
+                } catch (Exception e) {
+                    log.error("신규 회원 홈페이지 리다이렉트 URI 생성 실패", e);
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+                }
 //                 log.info("신규 회원 감지 - 회원가입 처리 시작");
 
 //                 // 사용자 정보 파싱
@@ -219,10 +268,17 @@ public class AuthController {
             
         } catch (Exception e) {
             log.error("카카오 로그인 콜백 처리 실패", e);
-            model.addAttribute("success", false);
-            model.addAttribute("error", "로그인 처리 중 오류가 발생했습니다: " + e.getMessage());
-            model.addAttribute("errorDetail", e.getClass().getSimpleName());
-            return "kakao-login-result";
+            // 오류 발생 시 에러 페이지로 리다이렉트
+            try {
+                String errorMessage = URLEncoder.encode(e.getMessage(), StandardCharsets.UTF_8);
+                URI errorRedirectUri = new URI("/?error=true&message=" + errorMessage);
+                HttpHeaders headers = new HttpHeaders();
+                headers.setLocation(errorRedirectUri);
+                return new ResponseEntity<>(headers, HttpStatus.FOUND);
+            } catch (Exception ex) {
+                log.error("오류 리다이렉트 URI 생성 실패", ex);
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+            }
         }
     }
 
